# test-vtkwrap-shared

./: Dockerfile  LICENSE  README.md  requirements.txt  test_script.py
project1/: CMakeLists.txt  setup.py
project1/stdpywrap1/: CMakeLists.txt  __init__.py
project1/vtkmodule1/: CMakeLists.txt  vtkCube1.cxx  vtkCube1.h
project2/: CMakeLists.txt  setup.py
project2/CMake/: Findproject1.cmake
project2/stdpywrap2/: CMakeLists.txt  __init__.py
project2/vtkmodule2/: CMakeLists.txt  vtkCube2.cxx  vtkCube2.h
